--- a/docs/old_demo_notebooks/drifters_ecofoci.ipynb
+++ b/docs/old_demo_notebooks/drifters_ecofoci.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "from glob import glob\n",
     "from pathlib import Path\n",
     "import intake\n",
-    "from pkg_resources import resource_filename\n",
+    "from importlib.resources import files\n",
     "import os\n",
     "\n",
     "import cook_inlet_catalogs as cic"
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo Notebook: EcoFOCI Drifters\n",
+    "# EcoFOCI Drifters\n",
     "\n",
     "As described on the [main project website for EcoFOCI](https://www.ecofoci.noaa.gov/):\n",
     "\n",
@@ -58,13 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "base_dir = resource_filename('cook_inlet_catalogs', '')\n",
-    "cat_path = os.path.join(base_dir, f\"catalogs/{cat_name}.yaml\")\n",
+    "base_dir = files(cic)\n",
+    "cat_path = base_dir / f\"catalogs/{cat_name}.yaml\"\n",
     "cat = intake.open_catalog(cat_path)"
    ]
   },
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +260,7 @@
        " '57889_y2005']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -312,47 +311,47 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>datetime</th>\n",
-       "      <th>longitude_E</th>\n",
        "      <th>latitude_N</th>\n",
+       "      <th>longitude_E</th>\n",
        "      <th>depth_m</th>\n",
+       "      <th>datetime</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2003-09-16 17:02:00</td>\n",
-       "      <td>-148.941</td>\n",
        "      <td>59.282</td>\n",
+       "      <td>-148.941</td>\n",
        "      <td>40</td>\n",
+       "      <td>2003-09-16 17:02:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2003-09-16 19:24:00</td>\n",
-       "      <td>-148.984</td>\n",
        "      <td>59.287</td>\n",
+       "      <td>-148.984</td>\n",
        "      <td>40</td>\n",
+       "      <td>2003-09-16 19:24:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2003-09-16 21:01:00</td>\n",
-       "      <td>-148.999</td>\n",
        "      <td>59.294</td>\n",
+       "      <td>-148.999</td>\n",
        "      <td>40</td>\n",
+       "      <td>2003-09-16 21:01:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2003-09-16 21:59:00</td>\n",
-       "      <td>-149.046</td>\n",
        "      <td>59.298</td>\n",
+       "      <td>-149.046</td>\n",
        "      <td>40</td>\n",
+       "      <td>2003-09-16 21:59:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2003-09-16 23:27:00</td>\n",
-       "      <td>-149.000</td>\n",
        "      <td>59.313</td>\n",
+       "      <td>-149.000</td>\n",
        "      <td>40</td>\n",
+       "      <td>2003-09-16 23:27:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -363,38 +362,38 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>132</th>\n",
-       "      <td>2003-09-22 06:40:00</td>\n",
-       "      <td>-149.528</td>\n",
        "      <td>59.278</td>\n",
+       "      <td>-149.528</td>\n",
        "      <td>40</td>\n",
+       "      <td>2003-09-22 06:40:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>133</th>\n",
-       "      <td>2003-09-22 07:15:00</td>\n",
-       "      <td>-149.522</td>\n",
        "      <td>59.274</td>\n",
+       "      <td>-149.522</td>\n",
        "      <td>40</td>\n",
+       "      <td>2003-09-22 07:15:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>134</th>\n",
-       "      <td>2003-09-22 08:54:00</td>\n",
-       "      <td>-149.525</td>\n",
        "      <td>59.273</td>\n",
+       "      <td>-149.525</td>\n",
        "      <td>40</td>\n",
+       "      <td>2003-09-22 08:54:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>135</th>\n",
-       "      <td>2003-09-22 10:53:00</td>\n",
-       "      <td>-149.509</td>\n",
        "      <td>59.269</td>\n",
+       "      <td>-149.509</td>\n",
        "      <td>40</td>\n",
+       "      <td>2003-09-22 10:53:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136</th>\n",
-       "      <td>2003-09-22 12:35:00</td>\n",
-       "      <td>-149.572</td>\n",
        "      <td>59.266</td>\n",
+       "      <td>-149.572</td>\n",
        "      <td>40</td>\n",
+       "      <td>2003-09-22 12:35:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -402,23 +401,23 @@
        "</div>"
       ],
       "text/plain": [
-       "               datetime  longitude_E  latitude_N  depth_m\n",
-       "0   2003-09-16 17:02:00     -148.941      59.282       40\n",
-       "1   2003-09-16 19:24:00     -148.984      59.287       40\n",
-       "2   2003-09-16 21:01:00     -148.999      59.294       40\n",
-       "3   2003-09-16 21:59:00     -149.046      59.298       40\n",
-       "4   2003-09-16 23:27:00     -149.000      59.313       40\n",
-       "..                  ...          ...         ...      ...\n",
-       "132 2003-09-22 06:40:00     -149.528      59.278       40\n",
-       "133 2003-09-22 07:15:00     -149.522      59.274       40\n",
-       "134 2003-09-22 08:54:00     -149.525      59.273       40\n",
-       "135 2003-09-22 10:53:00     -149.509      59.269       40\n",
-       "136 2003-09-22 12:35:00     -149.572      59.266       40\n",
+       "     latitude_N  longitude_E  depth_m            datetime\n",
+       "0        59.282     -148.941       40 2003-09-16 17:02:00\n",
+       "1        59.287     -148.984       40 2003-09-16 19:24:00\n",
+       "2        59.294     -148.999       40 2003-09-16 21:01:00\n",
+       "3        59.298     -149.046       40 2003-09-16 21:59:00\n",
+       "4        59.313     -149.000       40 2003-09-16 23:27:00\n",
+       "..          ...          ...      ...                 ...\n",
+       "132      59.278     -149.528       40 2003-09-22 06:40:00\n",
+       "133      59.274     -149.522       40 2003-09-22 07:15:00\n",
+       "134      59.273     -149.525       40 2003-09-22 08:54:00\n",
+       "135      59.269     -149.509       40 2003-09-22 10:53:00\n",
+       "136      59.266     -149.572       40 2003-09-22 12:35:00\n",
        "\n",
        "[137 rows x 4 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -454,13 +453,6 @@
    "source": [
     "fig = cic.utils.plot_map(df, dataset_id)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
